# rust_rocket_simple_app

./: Cargo.toml  README.md
src/: main.rs  tests.rs
